--- a/css/app.css
+++ b/css/app.css
@@ -57,3 +57,11 @@ h2 {
 #paris {
     background-color: #d32f2f;
 }
+
+#amsterdam {
+    background-color: #03a9f4;
+}
+
+#hungary {
+    background-color: #d32f2f;
+}
